--- a/know_style.css
+++ b/know_style.css
@@ -6,7 +6,7 @@
       font-family: 'Roboto', sans-serif;
     }
     body {
-      background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(/background_img.jpg);
+      background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(./background_img.jpg);
       background-repeat:no-repeat;
       background-attachment:fixed;
       background-size:cover;
