--- a/know_style.css
+++ b/know_style.css
@@ -6,7 +6,7 @@
       font-family: 'Roboto', sans-serif;
     }
     body {
-      background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url('background_img.jpg');
+      background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(/images/background_img.jpg);
       background-repeat:no-repeat;
       background-attachment:fixed;
       background-size:cover;
@@ -262,7 +262,8 @@
         width: 6rem;
       }   
     }
-@media (max-width:400px){
+
+  @media (max-width:400px){
     .hero1{
         flex-direction: column;
       }
