--- a/know_style.css
+++ b/know_style.css
@@ -6,7 +6,7 @@
       font-family: 'Roboto', sans-serif;
     }
     body {
-      background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url('background_img.jpg');
+      background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(/images/background_img.jpg);
       background-repeat:no-repeat;
       background-attachment:fixed;
       background-size:cover;
@@ -23,7 +23,7 @@
       opacity: 0.8;
       border-radius: 1.5rem;
       margin: 1rem;
-      box-shadow:1rem 1rem 2rem #8fe36f inset;
+      box-shadow:1rem 1rem 2rem wheat inset;
     }
     header .container {
       display: flex;
@@ -77,7 +77,7 @@
       padding: 20px;
       color: wheat;
       border-radius: 1.5rem;
-      box-shadow:0 0.5rem 1rem #8fe36f;
+      box-shadow:0 0.5rem 1rem #eff5ed;
     }
      .hero1 {
       height: 70vh;
@@ -110,7 +110,6 @@
     }
     .section {
       padding: 40px 20px;
-      /* background: white; */
       background: rgba(0, 0, 0, 0.5);
       color:wheat;
       margin: 20px 0;
@@ -125,6 +124,27 @@
     .section h2 {
       text-align: center;
       margin-bottom: 20px;
+    }
+    .about-section .box-1{
+      height:8rem; 
+      width:18rem; 
+      background:orange; 
+      border-radius:2rem;
+    }
+    .about-section .box-1 .box-2{
+      width:18rem; height:8rem; 
+      background:rgb(236, 236, 113); 
+      color:black; 
+      margin:0.4rem;
+      border-radius:2rem;
+      transition: margin 1s;
+    }
+    .about-section .box-1 .box-2:hover{
+      margin:-0.6rem;
+    }
+    .box-2 p{
+      padding: 1rem;
+      margin-top:-1rem;
     }
     .about-section,
     .achievements-section,
@@ -146,8 +166,12 @@
     .achievements-image img {
       width: 100%;
       border-radius: 1.5rem;
+      /* margin:0.4rem; */
       box-shadow:0.5rem 1rem 2rem rgb(244, 224, 187) ; 
     }
+    /* .about-image, .achievements-image img:hover{
+      margin:-0.6rem;
+    } */
     .about-text,
     .achievements-text {
       flex: 2 1 400px;
@@ -192,7 +216,7 @@
     border-radius: 1.5rem;
     margin: 1rem;
     opacity: 0.9;
-    box-shadow: 0.5rem 1rem 2rem #8fe36f inset;
+    box-shadow: 0.5rem 1rem 2rem wheat inset;
     }
     footer p{
       color: wheat;
@@ -256,11 +280,29 @@
   .hero1 .text h2 {
     color: wheat;
     font-size: 0.9rem;
-}
+  }
       .marquee img{
         height: 3.5rem;
         width: 6rem;
       }   
+      .about-section .box-1{
+        height:6.5rem;
+      width: 12rem;
+      background: orange;
+      border-radius: 2rem;
+      }
+      .about-section .box-1 .box-2 P{
+      padding: 1rem;
+      font-size: 0.9rem;
+      margin-top: -2rem;
+      }
+      .about-section .box-1 .box-2{
+        width:13rem;
+        height:6.5rem;
+      }
+      .box-2 h2{
+        font-size:1.2rem;
+      }
     }
 
   @media (max-width:400px){
