--- a/css/know_style.css
+++ b/css/know_style.css
@@ -6,13 +6,11 @@
       font-family: 'Roboto', sans-serif;
     }
     body {
-      background-image: url(../images/background_img.jpg);
-      /* background-image: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(/images/background_img.jpg); */
+      background-image: url(./images/background_img.jpg);
       background-repeat:no-repeat;
       background-attachment:fixed;
       background-size:cover;
       background-position:center;
-      /* overflow: hidden; */
     }
     header {
       background: white;
@@ -422,3 +420,4 @@
       }
 
     }
+
