--- a/css/know_style.css
+++ b/css/know_style.css
@@ -6,7 +6,7 @@
       font-family: 'Roboto', sans-serif;
     }
     body {
-      background-image: url('images/background_img.jpg');
+      background-image: url('./images/background_img.jpg');
       background-repeat:no-repeat;
       background-attachment:fixed;
       background-size:cover;
@@ -420,5 +420,6 @@
       }
 
     }
+
 
 
