--- a/css/know_style.css
+++ b/css/know_style.css
@@ -367,7 +367,7 @@
       .about-section .box-1{
         height:6.5rem;
       width: 12rem;
-      background: orange;
+      background: #163a5e;
       border-radius: 2rem;
       }
       .about-section .box-1 .box-2 P{
@@ -420,6 +420,7 @@
       }
 
     }
+
 
 
 
